Prevent transition from generating horizontal scrollbar

--- a/credit-decision-game/src/styles/general-layout.css
+++ b/credit-decision-game/src/styles/general-layout.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
-  padding: 0.5rem 2rem 0 2rem;
+  padding: 0 2rem 0 2rem;
 }
 
 @media (min-width: 950px) {
